# backpack-example

./: .gitignore  LICENSE  Makefile  Pipfile  Procfile  README.md  Taskfile.yml  backpack  backpack.yml  docker-compose-prod.yml  docker-compose.yml  go.mod  manage.py  package.json  pyproject.toml  requirements.txt
.backpack/: .buildpacks  README.md  go.mod  go.sum  main.go
.backpack/application/: config.go  symbols.go
.backpack/cmd/: build.go  debug.go  infra.go  run.go  setup.go  shell.go  stop.go  terraform.go  vars.go
.backpack/delivery/: ghactions.go  setup-ansible.sh  test-server.sh
.backpack/development/: certs.go  taskfile.go
.backpack/digitalocean/: dokku-manage-keys.sh  post-deploy.sh
.backpack/docker/: docker.go  python-dev.Dockerfile  python-prod.Dockerfile
.backpack/docs/: debugger.md  local-deployment.md  local-https.md  setup.md  upstream.md
.backpack/github/: action-workflow.yml  actions.go  build-backpack.sh  deploy.sh  install-terraform.sh  setup-ansible.sh  terraform-apply.sh  terraform-plan.sh
cmd/: root.go  run.go  setup.go  stop.go  terraform.go  vars.go
development/: Taskfile.yml  taskfile.go
digitalocean/: dokku-setup.sh
docker/: docker.go  python-dev.Dockerfile
docs/: local-deployment.md  upstream.md
etc/: sample.json
github/: action-workflow.yml  build-release.sh  terraform-apply.sh
internal/: context.go
runtime/: berglas-loader.sh  django-dev.sh  entry-prod.sh  entry-shell.sh
terraform/: backend.tf  backend.tf.json  backpack.tf  backpack.tf.json  main.tf.json  meta.tf  providers.tf  terraform.go
(+70 files in other folders)
